force-app/main/default/objects/Declaration_Template__c/Declaration_Template__c.object-meta.xml
<CustomObject>
    <label>Declaration Template</label>
    <nameField>
        <label>Declaration Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Declaration Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>