force-app/main/default/objects/Declaration_Template__c/fields/Application_Template__c.field-meta.xml
<CustomField>
    <fullName>Application_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application Template</label>
    <referenceTo>Application_Template__c</referenceTo>
    <relationshipLabel>Declaration Templates</relationshipLabel>
    <relationshipName>Application_T_Declaration_Ts</relationshipName>
    <type>Lookup</type>
</CustomField>