force-app/main/default/objects/Declaration_Template__c/fields/Renewal_Template__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Renewal Template</label>
    <referenceTo>Renewal_Template__c</referenceTo>
    <relationshipLabel>Declaration Templates</relationshipLabel>
    <relationshipName>RenewalTemplate_Declaration_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>