force-app/main/default/objects/Declaration_Template__c/fields/Unique_Field__c.field-meta.xml
<CustomField>
    <fullName>Unique_Field__c</fullName>
    <externalId>true</externalId>
    <label>Unique Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>