force-app/main/default/objects/Declaration_Template__c/recordTypes/Application_Declaration.recordType-meta.xml
<RecordType>
    <fullName>Application_Declaration</fullName>
    <active>true</active>
    <label>Application Declaration</label>
</RecordType>