force-app/main/default/objects/Declaration_Template__c/recordTypes/Renewal_Declaration.recordType-meta.xml
<RecordType>
    <fullName>Renewal_Declaration</fullName>
    <active>true</active>
    <label>Renewal Declaration</label>
</RecordType>